# vf-database-recorder

./: CMakeLists.txt  LoggerSettings.qml  localintrospection.cpp  localintrospection.h  main.cpp  main.qml  qml.qrc  vf-database-recorder.pro
